Minor fixes on the Jupyter notebooks.

--- a/examples/notebooks-kernel/KernelPyLogit using KFold Cross-validation.ipynb
+++ b/examples/notebooks-kernel/KernelPyLogit using KFold Cross-validation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# KernelPyLogit using KFold Cross-validation\n",
     "\n",
-    "The purpose of this Jupyter notebook is to demonstrate how the KFold Cross-val function can be used to estimate a Kernel Logistic Regression (KLR) model. It is assumed that the user has already read the Main PyKernelLogit Example notebook."
+    "The purpose of this Jupyter notebook is to demonstrate how the KFold Cross-val function can be used to estimate a Random Utility Model (RUM) and a Kernel Logistic Regression (KLR) model. It is assumed that the user has already read the 'Main PyKernelLogit Example' notebook."
    ]
   },
   {
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Estimation of a KLR model using KFold Cross-validation\n",
+    "## 2. Estimation of a RUM using KFold Cross-validation\n",
     "\n",
     "In Machine Learning (ML) it is recommended to perform a cross-validation, which is a resampling procedure used to estimate the skill of ML models on a limited data sample. The most commonly cross-validation technique is K-fold cross-validation. This procedure has a single parameter called $K$ which contains the number of subsets, called folds, in which a given data sample are divided. If $K = 10$, for instance, then the procedure is named 10-fold cross-validation. Then, a test subset is generated picking a different fold for every iteration and the other $K-1$ folds are used as the training subset. Then, the model is estimated using this training subset and tested on the test subset for each of the $K$ iterations. The final results are commonly computed as the average of the individual results for each iteration.\n",
     "\n",
@@ -433,12 +433,171 @@
     "\n",
     "The KFold_cross_val function uses a Python yield statement that creates a generator function which returns an iterator known as a generator iterator. The body of the generator function is executed by calling the generator's next() method repeatedly until it raises an exception. The main advantage of the yield statement is that it simplifies the application of the K-fold cross-validation, because the KFold_cross_val function can be called inside a for loop. Then, at each iteration of the loop, the corresponding training and test set are computed by this generator iterator.\n",
     "\n",
-    "The next code estimates and evaluates a KLR model using 5-Fold Cross-validation."
+    "The next code estimates and evaluates a RUM using 10-Fold Cross-validation. The model specification used is the same as in the 'Main PyKernelLogit Example' notebook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty basic_specification and basic_names ordered dictionary\n",
+    "basic_specification = OrderedDict()\n",
+    "basic_names = OrderedDict()\n",
+    "\n",
+    "# Model specification\n",
+    "basic_specification[\"intercept\"] = [2, 3, 4]\n",
+    "basic_names[\"intercept\"] = ['ASC CarPool',\n",
+    "                            'ASC Bus',\n",
+    "                            'ASC Rail']\n",
+    "\n",
+    "basic_specification[\"cost\"] = [[1, 2, 3, 4]]\n",
+    "basic_names[\"cost\"] = ['Travel cost (dollars)']\n",
+    "\n",
+    "basic_specification[\"time\"] = [[1, 2, 3, 4]]\n",
+    "basic_names[\"time\"] = ['Travel time (minutes)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Set 1 ---\n",
+      "Log-likelihood at zero: -564.2218\n",
+      "Initial Log-likelihood: -564.2218\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -319.1546\n",
+      "Rho squared: 0.434345\n",
+      "Precision: 0.739130, Recall: 0.739130, FScore: 0.739130\n",
+      "--- Set 2 ---\n",
+      "Log-likelihood at zero: -564.2218\n",
+      "Initial Log-likelihood: -564.2218\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -316.4052\n",
+      "Rho squared: 0.439218\n",
+      "Precision: 0.608696, Recall: 0.608696, FScore: 0.608696\n",
+      "--- Set 3 ---\n",
+      "Log-likelihood at zero: -564.2218\n",
+      "Initial Log-likelihood: -564.2218\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -322.1470\n",
+      "Rho squared: 0.429042\n",
+      "Precision: 0.695652, Recall: 0.695652, FScore: 0.695652\n",
+      "--- Set 4 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -322.0688\n",
+      "Rho squared: 0.430580\n",
+      "Precision: 0.688889, Recall: 0.688889, FScore: 0.688889\n",
+      "--- Set 5 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -326.2585\n",
+      "Rho squared: 0.423172\n",
+      "Precision: 0.800000, Recall: 0.800000, FScore: 0.800000\n",
+      "--- Set 6 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -321.6866\n",
+      "Rho squared: 0.431255\n",
+      "Precision: 0.666667, Recall: 0.666667, FScore: 0.666667\n",
+      "--- Set 7 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -309.6878\n",
+      "Rho squared: 0.452469\n",
+      "Precision: 0.577778, Recall: 0.577778, FScore: 0.577778\n",
+      "--- Set 8 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -312.4415\n",
+      "Rho squared: 0.447601\n",
+      "Precision: 0.533333, Recall: 0.533333, FScore: 0.533333\n",
+      "--- Set 9 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.04 seconds.\n",
+      "Final log-likelihood: -317.5469\n",
+      "Rho squared: 0.438574\n",
+      "Precision: 0.622222, Recall: 0.622222, FScore: 0.622222\n",
+      "--- Set 10 ---\n",
+      "Log-likelihood at zero: -565.6081\n",
+      "Initial Log-likelihood: -565.6081\n",
+      "Estimation Time for Point Estimation: 0.01 seconds.\n",
+      "Final log-likelihood: -319.7691\n",
+      "Rho squared: 0.434645\n",
+      "Precision: 0.711111, Recall: 0.711111, FScore: 0.711111\n",
+      "\n",
+      " --------------------- Final Results ---------------------\n",
+      "Precision: 0.664348, Recall: 0.664348, FScore: 0.664348\n"
+     ]
+    }
+   ],
+   "source": [
+    "fold = 0\n",
+    "precision = 0\n",
+    "recall = 0\n",
+    "fscore = 0\n",
+    "\n",
+    "n_splits = 10\n",
+    "\n",
+    "for train_set, test_set in pkl.KFold_cross_val(long_mode_choice,\n",
+    "                                               obs_id_column,\n",
+    "                                               n_splits,\n",
+    "                                               shuffle=False,\n",
+    "                                               random_state=1):\n",
+    "    \n",
+    "    fold += 1\n",
+    "    print(\"--- Set %d ---\" % fold)\n",
+    "    \n",
+    "    # Estimate the multinomial logit model (MNL)\n",
+    "    linear_model = pkl.create_choice_model(data=train_set,\n",
+    "                                            alt_id_col=custom_alt_id,\n",
+    "                                            obs_id_col=obs_id_column,\n",
+    "                                            choice_col=choice_column,\n",
+    "                                            specification=basic_specification,\n",
+    "                                            model_type=\"MNL\",\n",
+    "                                            names=basic_names)\n",
+    "    \n",
+    "    # Specify the initial values and method for the optimization.\n",
+    "    linear_model.fit_mle(np.zeros(5))\n",
+    "    print(\"Rho squared: %f\" % linear_model.rho_squared)\n",
+    "    \n",
+    "    (precision_fold, recall_fold, fscore_fold) = linear_model.precision_recall_fscore(test_set, \"micro\", beta = 1)\n",
+    "\n",
+    "    print(\"Precision: %f, Recall: %f, FScore: %f\" % (precision_fold, recall_fold, fscore_fold))\n",
+    "    \n",
+    "    precision += precision_fold\n",
+    "    recall += recall_fold\n",
+    "    fscore += fscore_fold\n",
+    "    \n",
+    "print(\"\\n --------------------- Final Results ---------------------\")\n",
+    "print(\"Precision: %f, Recall: %f, FScore: %f\" % (precision/n_splits, recall/n_splits, fscore/n_splits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Estimation of a KLR model using KFold Cross-validation\n",
+    "\n",
+    "Now, a KLR model is evaluated using 10-Fold Cross-validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -484,19 +643,19 @@
       "--- Set 3 ---\n",
       "Log-likelihood at zero: -564.2218\n",
       "Initial Log-likelihood: -564.2218\n",
-      "Estimation Time for Point Estimation: 0.09 seconds.\n",
+      "Estimation Time for Point Estimation: 0.05 seconds.\n",
       "Final log-likelihood: -348.7580\n",
       "Precision: 0.760870, Recall: 0.760870, FScore: 0.760870\n",
       "--- Set 4 ---\n",
       "Log-likelihood at zero: -565.6081\n",
       "Initial Log-likelihood: -565.6081\n",
-      "Estimation Time for Point Estimation: 0.05 seconds.\n",
+      "Estimation Time for Point Estimation: 0.07 seconds.\n",
       "Final log-likelihood: -350.5128\n",
       "Precision: 0.733333, Recall: 0.733333, FScore: 0.733333\n",
       "--- Set 5 ---\n",
       "Log-likelihood at zero: -565.6081\n",
       "Initial Log-likelihood: -565.6081\n",
-      "Estimation Time for Point Estimation: 0.06 seconds.\n",
+      "Estimation Time for Point Estimation: 0.09 seconds.\n",
       "Final log-likelihood: -354.9706\n",
       "Precision: 0.777778, Recall: 0.777778, FScore: 0.777778\n",
       "--- Set 6 ---\n",
@@ -508,7 +667,7 @@
       "--- Set 7 ---\n",
       "Log-likelihood at zero: -565.6081\n",
       "Initial Log-likelihood: -565.6081\n",
-      "Estimation Time for Point Estimation: 0.08 seconds.\n",
+      "Estimation Time for Point Estimation: 0.06 seconds.\n",
       "Final log-likelihood: -339.8173\n",
       "Precision: 0.600000, Recall: 0.600000, FScore: 0.600000\n",
       "--- Set 8 ---\n",
@@ -526,9 +685,12 @@
       "--- Set 10 ---\n",
       "Log-likelihood at zero: -565.6081\n",
       "Initial Log-likelihood: -565.6081\n",
-      "Estimation Time for Point Estimation: 0.07 seconds.\n",
+      "Estimation Time for Point Estimation: 0.06 seconds.\n",
       "Final log-likelihood: -345.4946\n",
-      "Precision: 0.688889, Recall: 0.688889, FScore: 0.688889\n"
+      "Precision: 0.688889, Recall: 0.688889, FScore: 0.688889\n",
+      "\n",
+      " --------------------- Final Results ---------------------\n",
+      "Precision: 0.677729, Recall: 0.677729, FScore: 0.677729\n"
      ]
     }
    ],
@@ -536,9 +698,15 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "    \n",
     "fold = 0\n",
+    "precision = 0\n",
+    "recall = 0\n",
+    "fscore = 0\n",
+    "\n",
+    "n_splits = 10\n",
+    "\n",
     "for train_set, test_set in pkl.KFold_cross_val(long_mode_choice,\n",
     "                                               obs_id_column,\n",
-    "                                               n_splits=10,\n",
+    "                                               n_splits,\n",
     "                                               shuffle=False,\n",
     "                                               random_state=1):\n",
     "    \n",
@@ -594,8 +762,16 @@
     "    # Specify the initial values and method for the optimization.\n",
     "    kernel_model.fit_mle(np.zeros(total_vars), method=\"L-BFGS-B\", PMLE=\"RIDGE\", PMLE_lambda=4)\n",
     "    \n",
-    "    (precision, recall, fscore) = kernel_model.precision_recall_fscore(K_long_format_test, \"micro\", beta = 1)\n",
-    "    print(\"Precision: %f, Recall: %f, FScore: %f\" % (precision, recall, fscore))"
+    "    (precision_fold, recall_fold, fscore_fold) = kernel_model.precision_recall_fscore(K_long_format_test, \"micro\", beta = 1)\n",
+    "\n",
+    "    print(\"Precision: %f, Recall: %f, FScore: %f\" % (precision_fold, recall_fold, fscore_fold))\n",
+    "    \n",
+    "    precision += precision_fold\n",
+    "    recall += recall_fold\n",
+    "    fscore += fscore_fold\n",
+    "    \n",
+    "print(\"\\n --------------------- Final Results ---------------------\")\n",
+    "print(\"Precision: %f, Recall: %f, FScore: %f\" % (precision/n_splits, recall/n_splits, fscore/n_splits))"
    ]
   },
   {
